<resources>

    <!--Strings para botones -->

            <!--String para el boton de informacion-->
            <string name="info">Información</string>

            <!--String para el boton de informacion-->
            <string name="pedido">Realizar pedido</string>

            <!--String para el boton de volver-->
            <string name="vol">VOLVER</string>

            <!--String para el boton de donde estamos-->
            <string name="local">DONDE ESTAMOS</string>

            <!--String para el boton de añadir a la compra-->
            <string name="btnCom">Añadir a mi compra</string>

            <!--String para el boton de siguiente-->
            <string name="btnSig">SIGUIENTE</string>

            <!--String para el boton de siguiente-->
            <string name="btnFin">FNALIZAR</string>



    <!--nombre de la aplicacion-->
    <string name="app_name">CebancPizza</string>

    <!--mapa-->
    <string name="title_activity_maps">Map</string>

    <!--nombre de la pantalla inicial-->
    <string name="NAME">Nombre</string>

    <!--apellido de la pantalla inicial-->
    <string name="SURNAME">Apellico</string>

    <!--direccion de la pantalla inicial-->
    <string name="dir1">Direccion</string>

    <!--telefono de la pantalla inicial-->
    <string name="telefono">Telefono</string>

    <!--email de la pantalla inicial-->
    <string name="email">E-mail</string>



    <string name="intNombre">Introduce tu nombre</string>
    <string name="intApellido">Introduce tu apellido</string>
    <string name="intDireccion">Introduce tu direccion</string>
    <string name="intTelefono">Introduce tu telefono</string>
    <string name="intrEmail">Introduce tu email</string>






    <!--nombre de la pantalla inicial-->
    <string name="nombre">CebancPizzas</string>


    <!--Descripciones de las imagenes-->
    <string name="description">Imagen de la pizzeria Pizzas Cebanc</string>
    <string name="descriptionBebida">Logos de las bebidas</string>


    <!--String para mensaje de cantidad en la pantalla de elccion de las pizzas-->
    <string name="cant">CANTIDAD</string>



    <!--String para el correo-->
    <string name="contact1">correoCebancPizzas@gmail.com</string>

    <!--String para el telefono-->
    <string name="tlf">943 31 69 00</string>

    <!--String para el nombre de la calle-->
    <string name="calle">Nos encontramos en berio Pasealekua 50, codigo postal 20018 Donostia</string>

    <!--String para el contacto-->
    <string name="cont">CONTACTO</string>



    <!--String para los tipos de pizza-->
    <string name="tipos">Escoge tu tipo de pizza</string>

    <!--String para la masa de la pizza-->
    <string name="masas">Escoge tu tipo de masa</string>

    <!--String para el tamaño de la pizza-->
    <string name="tamaños">Escoge tu tamaño de pizza</string>

    <!--String para el array de los tipos de pizza-->
    <string-array name="SpinnerArray">
        <item>Pizza Barbacoa</item>
        <item>Pizza Carbonara</item>
        <item>Pizza 4 Quesos</item>
        <item>Pizza Vegetal</item>
        <item>Pizza Tropical</item>
    </string-array>

    <!--String para el array de las masas de pizza-->
    <string-array name="SpinnerMasas">
        <item>Fina</item>
        <item>Normal</item>
    </string-array>

    <!--String para el array de las masas de pizza-->
    <string-array name="SpinnerTamaños">
        <item>Individual</item>
        <item>Mediana</item>
        <item>Familiar</item>
    </string-array>


    <!--String para el array de las masas de pizza-->
    <string-array name="SpinnerBebidas">
        <item>Coca-Cola</item>
        <item>Kas Limon</item>
        <item>Agua</item>
        <item>Cerveza</item>
        <item>Nestea</item>
        <item>RedBull</item>
    </string-array>

</resources>
